# PublicAIHackathonTeam3

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  api.py  backend.Dockerfile  categorization.py  docker-compose.yml  extract_data.py  extracted_projects.json  pyproject.toml  requirements.txt
Hackathon/: Masterdatenbank_Integrationsprojekte_2019-2026.xlsx
Hackathon/2019_2020/: 035_2019_2020_Inhaltlicher Endbericht.docx  035_DEUTSCH-IM-ALLTAG_2019_2020_Projektbeschreibung.docx  093_2019_2020_Indikatoren.xlsx  093_2019_2020_Projektbeschreibung.docx  093_YouthConnect_2019_2020 Inhaltlicher Endbericht.docx  165_2019_2020_Indikatoren.xlsx  165_2019_2020_Inhaltlicher Endbericht.docx  165_2019_2020_Projektbeschreibung.docx
Hackathon/2021/: 015_2021_Indikatoren.xlsx  015_2021_Indikatorenbericht.xlsx  015_2021_Inhaltlicher Endbericht.docx  057_2021_Indikatorenbericht.xlsx
Hackathon/2022_2023/: 050_2022_2023_Indikatoren.xlsx  050_2022_2023_Inhaltlicher Endbericht.docx  050_Lernstube_2022_2023_Indikatorenbericht.xlsx  096_2022_2023_Indikatoren.xlsx  096_Wurzeln-fassen_2022_2023_Indikatorenbericht.xlsx  130_ 2022_2023_Inhaltlicher Endbericht.docx  ~$0_ 2022_2023_Inhaltlicher Endbericht.docx
app/: index.html  package.json  tsconfig.json
app/src/: App.tsx  types.ts
extraction/: README.md  categorization.py  extract_data.py  extracted_projects.json
extraction_pipeline/: discovery.py  excel.py  pipeline.py
notebooks/: 042_2024_25_transformer_extraction_prototype.ipynb  dynamic_transformer_extraction_prototype.ipynb
webapp/: api.py  backend.Dockerfile
(+71 files in other folders)
