[project]
name = "publicaihackathonteam3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx>=0.2.4",
    "fastapi>=0.136.1",
    "gliner>=0.2.26",
    "openai>=2.34.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "sentence-transformers>=5.4.1",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]
